# Deep-Forest

./: .all-contributorsrc  .codecov.yml  .coveragerc  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.rst  CONTRIBUTIONG.md  CONTRIBUTORS.md  LICENSE  MANIFEST.in  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-and-test.yml  build-wheels.yml  code-quality.yml  mac-os-build-and-test.yml
build_tools/: linting.sh  requirements.txt
deepforest/: __init__.py  _binner.py  _cutils.pyx  _estimator.py  _explainer.py  _forest.pyx  _io.py  _layer.py  _utils.py  cascade.py  forest.py  scanner.py  setup.py
deepforest/preprocessing/: __init__.py  imagescanner.py
deepforest/tree/: __init__.py  _criterion.pxd  _criterion.pyx  _splitter.pxd  _splitter.pyx  _tree.pxd  _tree.pyx  _utils.pxd  _utils.pyx  setup.py  tree.py
deepforest/utils/: kfoldwrapper.py
docs/: api_reference.rst  conf.py  experiments.rst  how_to_get_started.rst  index.rst  installation_guide.rst  parameters_tunning.rst  related_software.rst  report_from_users.rst  requirements.txt
docs/_static/: custom.css
docs/advanced_topics/: architecture.rst  use_customized_estimator.rst
tests/: test_binner.py  test_buffer.py  test_explainer.py  test_forest.py  test_image_scanner.py  test_io.py  test_layer_estimator.py  test_model.py  test_model_classifier.py  test_model_input.py  test_model_regressor.py  test_scanner.py  test_set_custom_estimator.py  test_tree regressor.py  test_tree_classifier.py  test_tree_same.py  test_utils.py
