[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "Cython>=0.28.5",
    "numpy>=1.14.6",
    "scipy>=1.1.0"
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
