[build-system]
requires = [
    "setuptools",
    "wheel",
    "Cython>=0.28.5",
    "oldest-supported-numpy",
    "scipy>=1.3.2",
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
