[build-system]
requires = [
    "setuptools<60.0",
    "wheel",
    "Cython>=0.28.5,<3.0",
    "oldest-supported-numpy",
    "scipy>=1.3.2",
]
[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | docs
)/
'''
